WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254212
[Gstreamer][WebRTC] webrtc/video-disabled-black.html fails
https://bugs.webkit.org/show_bug.cgi?id=254212
Summary
[Gstreamer][WebRTC] webrtc/video-disabled-black.html fails
Philippe Normand
Reported
2023-03-21 07:24:00 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-03-21 07:32:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11759
EWS
Comment 2
2023-03-22 02:10:32 PDT
Committed
261951@main
(aff28bc50d0e): <
https://commits.webkit.org/261951@main
> Reviewed commits have been landed. Closing PR #11759 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-22 02:11:20 PDT
<
rdar://problem/107046108
>
Philippe Normand
Comment 4
2023-04-29 05:29:50 PDT
This is timing out after
https://commits.webkit.org/263499@main
I'll garden this for now, needs a new patch...
Philippe Normand
Comment 5
2023-07-17 07:37:46 PDT
I have a patch for this but I'm afraid a GStreamer patch is also needed...
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/5048
Philippe Normand
Comment 6
2023-07-21 02:16:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15978
EWS
Comment 7
2023-08-04 10:34:47 PDT
Committed
266589@main
(d9e6730c373f): <
https://commits.webkit.org/266589@main
> Reviewed commits have been landed. Closing PR #15978 and removing active labels.
Amanda Falke
Comment 8
2023-09-25 11:34:51 PDT
Test is a bit flaky on bots, gardened it for GTK, WPE
https://github.com/WebKit/WebKit/pull/18181
EWS
Comment 9
2023-09-27 02:22:04 PDT
Test gardening commit
268498@main
(c2c3e60de05f): <
https://commits.webkit.org/268498@main
> Reviewed commits have been landed. Closing PR #18181 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug